add session, client & history domain
