# internal/domain/history/repository.go
@@ -1,4 +1,4 @@
-package session
+package history
 
 import (
 	"github.com/chack93/scrumpoker_api/internal/service/database"
@@ -6,7 +6,7 @@ import (
 	"github.com/sirupsen/logrus"
 )
 
-func CreateSession(model *Session) (err error) {
+func CreateHistory(model *History) (err error) {
 	model.SetInit()
 	if err = database.Get().Create(model).Error; err != nil {
 		logrus.Errorf("failed, err: %v", err)
@@ -14,28 +14,21 @@ func CreateSession(model *Session) (err error) {
 	return
 }
 
-func ListSession(modelList *[]Session) (err error) {
-	if err = database.Get().Find(modelList).Error; err != nil {
+func ListHistoryBySessionID(sessionID uuid.UUID, modelList *[]History) (err error) {
+	if err = database.Get().Where("session_id = ?", sessionID).Find(modelList).Error; err != nil {
 		logrus.Errorf("failed, err: %v", err)
 	}
 	return
 }
 
-func ReadSession(id uuid.UUID, model *Session) (err error) {
+func ReadHistory(id uuid.UUID, model *History) (err error) {
 	if err = database.Get().First(&model, id).Error; err != nil {
 		logrus.Errorf("failed, id: %s, err: %v", id.String(), err)
 	}
 	return
 }
 
-func ReadSessionJoinCode(joinCode string, model *Session) (err error) {
-	if err = database.Get().Where("join_code = ?", joinCode).First(&model).Error; err != nil {
-		logrus.Errorf("failed, joinCode: %s, err: %v", joinCode, err)
-	}
-	return
-}
-
-func UpdateSession(id uuid.UUID, model *Session) (err error) {
+func UpdateHistory(id uuid.UUID, model *History) (err error) {
 	model.SetUpdate()
 	if err = database.Get().Save(model).Error; err != nil {
 		logrus.Errorf("failed, id: %s, err: %v", model.ID.String(), err)
@@ -43,8 +36,8 @@ func UpdateSession(id uuid.UUID, model *Session) (err error) {
 	return
 }
 
-func DeleteSession(id uuid.UUID, model *Session) (err error) {
-	if err = ReadSession(id, model); err != nil {
+func DeleteHistory(id uuid.UUID, model *History) (err error) {
+	if err = ReadHistory(id, model); err != nil {
 		logrus.Errorf("read failed, id: %s, err: %v", model.ID.String(), err)
 		return
 	}
